Revision history for Perl extension XTaTIK.

0.003001 Unreleased
    [Breaking Changes]
        - Restructured cart plugin system
        - checkout_system config var now must be an arrayref
    [Bug fixes]
        - Fixed alignment on shoutout when thin logos are used

0.002001 2015-09-06
    [Breaking Changes]
        - Pricing is now per-site and not global (#133)
        - Allow setting per-region GeoIP pricing
    [Bug fixes]
        - nopic.png is now properly displayed on search results and checkout
            page for products without pics (#144)
        - Empty categories now result in 404s (#143)
        - Checking out while setting all quantities to zero
            is no longer possible (#145)
        - Fixed rendering bug on checkout progress bar (#136)
    [Miscellaneous]
        - Made default favicon prettier (#62)
        - Made all existing tests pass (must set XTATIK_TESTING env to run)
            (#119)
        - Added .cat, .subcat, and .prod classes on category list page
        - Added XTATIK_BLOG_SRC env var
        - White setting prices, you can now use an optional dollar sign (#134)
    [Docs]
        - Wrote Appendix::StaticFiles
        - Wrote Appendix::SASSVariables

0.001002 2015-09-04
    - Mobile and IE8 fixes
    - Layout adjustments
    - Fixed 404 on checkout page terms and conditions
    - Added missing prereqs (#132)
    - Fixed distro packaging to include proper Issues/Repo URLs (#131)
    - Fixed incorrect lookup of "fake" site/company sass bootstrap vars files (#138)

0.001001 2015-08-30
    - First DEMO release